# langgraph-foundations

./: .env.example  .gitignore  main.py  pyproject.toml
module-0/: basics.ipynb
module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  deployment.ipynb  router.ipynb  simple_graph.ipynb
module-1/studio/: agent.py  langgraph.json  router.py  simple_graph.py
module-1/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
module-2/: chatbot-external-memory.ipynb  chatbot-summarization.ipynb  multiple-schemas.ipynb  state-reducers.ipynb  state-schema.ipynb  trim-filter-messages.ipynb
module-2/state_db/: example.db-shm  example.db-wal
module-2/studio/: chatbot.py  langgraph.json
module-3/: breakpoints.ipynb  dynamic-breakpoints.ipynb  edit-state-human-feedback.ipynb  streaming-interruption.ipynb  time-travel.ipynb
module-3/studio/: agent.py  langgraph.json
module-4/: map-reduce.ipynb  parallelization.ipynb  research-assistant.ipynb  sub-graph.ipynb
module-4/studio/: .env.example  langgraph.json  map_reduce.py  parallelization.py  requirements.txt  research_assistant.py
module-5/: memory_agent.ipynb  memory_store.ipynb  memoryschema_collection.ipynb  memoryschema_profile.ipynb
module-5/studio/: langgraph.json  memory_agent.py  memory_store.py  memoryschema_collection.py  memoryschema_profile.py
module-6/: README.md  assistant.ipynb  connecting.ipynb  creating.ipynb
module-6/deployment/: langgraph.json
