[project]
name = "langgraph-foundations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.12",
    "langgraph-prebuilt>=1.0.7",
    "langgraph-sdk>=0.3.3",
    "langsmith>=0.6.7",
    "notebook>=7.5.3",
    "python-dotenv>=1.2.1",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
